handle responseive issues on mobile

--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -51,6 +51,14 @@ md-sidenav md-list {
   padding-top: 5px;
 }
 
+@media (max-width: 960px ) {
+  #content {
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 5px;
+  }
+}
+
 #content .md-button.share {
   background-color: transparent;
   border: none;
